8291651: CleanerTest.java fails with "Cleanable was cleaned"